# wireshark-packet-analysis-tool

./: entropy_header_analysis.py  turnchannel.py
teams_study/: CMakeLists.txt  README.md  query
teams_study/data/: README.md  frames.Rmd
teams_study/p4/src/: entries_match_zoom_server.p4inc
teams_study/src/cmd/: teams_flows.h  teams_flows_main.cc  teams_meetings.h  teams_meetings_main.cc  teams_rtp.h
teams_study/src/lib/: jitter_calculator.h  mac_counter.h  net.h  pcap_file_reader.h  pcap_file_writer.h  rtcp.h  rtp_stream_analyzer.h  simple_binary_writer.h  teams.h  teams_nets.h  teams_offline_analyzer.cc  util.h
teams_study/test/: teams_flow_tracker_test.cc  teams_nets_test.cc
teams_study/wireshark/: zoom.lua
zoom_study/: README.md  start
zoom_study/data/: Makefile  meetings.Rmd  stats.Rmd  streams.Rmd
zoom_study/p4/test/: send.py
zoom_study/src/cmd/: teams_rtp_main.cc
zoom_study/src/lib/: fps_calculator.h  ring_buffer.h  rtp.h  simple_binary_reader.h  teams.cc  teams_analyzer.cc  teams_analyzer.h  teams_flow_tracker.cc  teams_flow_tracker.h  teams_nets.h  teams_offline_analyzer.h
zoom_study/test/: CMakeLists.txt  teams_flow_tracker_test.cc  test_packets.h  zoom_pkt_test.cc  zoom_test.cc
